# Velours

./: CMakeLists.txt  README.md
MiniBrowser/: CMakeLists.txt  ascii.txt  minibrowser.c  utf8.txt
Velours/: CMakeLists.txt  da.h  file.c  file.h  geometry.c  geometry.h  ht.c  ht.h  math.c  math.h  memory.c  memory.h  utf.h  utf8.h  velours.c  velours.h
Velours/dom/: CMakeLists.txt  dom.h
Velours/platform/: CMakeLists.txt  graphics.c  graphics.h  instance.c  instance.h  main.h  timer.h  window.h
Velours/platform/universal/: CMakeLists.txt  main.h
Velours/platform/universal/software/: CMakeLists.txt  graphics.c  graphics.h
Velours/platform/win/: CMakeLists.txt  graphics.cpp  instance.h  main.h  timer.c  timer.h  window.c  window.h
Velours/platform/win/software/: CMakeLists.txt  graphics.c  graphics.h  presentation.c  presentation.h
Velours/xml/: CMakeLists.txt  xml.c  xml.h
